--- a/day1.html
+++ b/day1.html
@@ -92,8 +92,13 @@
                 </div>
             </div>
             <!-- Day 1 額外地圖 (交通) -->
-            <div class="content-card shadow-lg mt-4 mb-8 text-sm text-gray-600 text-center" style="height: 400px;"><iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d209946.78088152877!2d135.34536233973273!3d34.69462417120699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e3!4m5!1s0x60008867b926205d%3A0xa63c05ef944c705b!2z56We5oi25qmf5aC0IChVS0IpIDEgS29iZWt1a28sIENodW8gV2FyZCwgS29iZSwgSHlvZ28gNjUwLTAwNDjml6XmnKw!3m2!1d34.6350979!2d135.2267037!4m5!1s0x60013a29d1dd2621%3A0x540d42181874f344!2z6L-R6ZC15aWI6ImvLCDml6XmnKzjgJI2MzAtODIxNSBOYXJhLCDmnbHlkJHkuK3nlLoyOQ!3m2!1d34.684248499999995!2d135.8275275!5e0!3m2!1szh-TW!2stw!4v1762328066535!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            <div class="content-card shadow-lg mt-4 mb-8 text-sm text-gray-600 text-center" style="height: 450px;">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d209946.78088152877!2d135.34536233973267!3d34.69462417120699!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e3!4m5!1s0x60008867b926205d%3A0xa63c05ef944c705b!2z56We5oi25qmf5aC0IOaXpeacrOOAkjY1MC0wMDQ4IEh5b2dvLCBLb2JlLCBDaHVvIFdhcmQsIEtvYmVrdWtvLCAx!3m2!1d34.6350979!2d135.2267037!4m5!1s0x60013a29d1dd2621%3A0x540d42181874f344!2z6L-R6ZC15aWI6ImvLCDml6XmnKzjgJI2MzAtODIxNSBOYXJhLCDmnbHlkJHkuK3nlLoyOQ!3m2!1d34.684248499999995!2d135.8275275!5e0!3m2!1szh-TW!2stw!4v1762388299962!5m2!1szh-TW!2stw" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <button class="mt-2 px-4 py-2 bg-red-100 text-red-700 rounded-md hover:bg-red-200">
+                <a href="https://maps.app.goo.gl/3M1HkRmUQUabGajM9" target="_blank" rel="noopener noreferrer">在 Google 地圖中開啟完整路線</a>
+            </div>            
 
+            
             <!-- === Card 2 (day1.2): 景點深度介紹 === -->
             <div class="content-card shadow-lg mb-8">
                 <div class="p-6 md:p-8">
@@ -253,7 +258,6 @@
         });
     </script>
     
-    <!-- 移除了 slider.js 的載入 -->
 
 </body>
 </html>
