--- a/day3.html
+++ b/day3.html
@@ -95,6 +95,11 @@
                                 </div>
                             </div>
                         </div>
+                         <!-- Day 3 額外地圖 (交通) -->
+                            <div class="content-card shadow-lg mt-4 mb-8 text-sm text-gray-600 text-center" style="height: 450px;">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d13074.833875906368!2d135.75815752734178!3d34.98896639463027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e3!4m5!1s0x60010fa421a0e2bf%3A0x8c899723ea784d82!2z5pel5pys5Lqs6YO95bqc5Lqs6YO95biC5Y2X5Y2AIEhpZ2FzaGlrdWpvIEthbWlnb3J5b2NobywgQ0hJU1VOIFBSRU1JVU3kuqzpg73kuZ3mop0!3m2!1d34.980508!2d135.7640137!4m5!1s0x600108d385dcfb07%3A0x62af658650c434ba!2z5riF5rC05a-6IOaXpeacrOOAkjYwNS0wODYyIEt5b3RvLCBIaWdhc2hpeWFtYSBXYXJkLCBLaXlvbWl6dSwgMSBDaG9tZeKIkjI5NA!3m2!1d34.9946662!2d135.784661!5e0!3m2!1szh-TW!2stw!4v1762388005185!5m2!1szh-TW!2stw" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <button class="mt-2 px-4 py-2 bg-red-100 text-red-700 rounded-md hover:bg-red-200"><a href="https://maps.app.goo.gl/Xpn3LfRJcibNbXoM9" target="_blank" rel="noopener noreferrer">在 Google 地圖中開啟完整路線</a>
+                            </div>                       
                     </div> <!-- /Slide 1 -->
 
                     <!-- === Slide 2 (day3.2): 景點深度介紹 === -->
