--- a/day5.html
+++ b/day5.html
@@ -95,7 +95,8 @@
                                     </ul>
                                 </div>
                                 <!-- 右欄: 圖片 -->
-                                <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" style="background-image: url('https://images.unsplash.com/photo-1528132646252-083f8b34c2d6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080');">
+                                <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" 
+                                style="background-image: url('照片');">
                                 </div>
                             </div>
                         </div>
@@ -111,7 +112,7 @@
                                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                                     <!-- 光明院 -->
                                     <div class="detail-tile">
-                                        <img src="https://images.unsplash.com/photo-1596707374391-717d80501a5e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080" alt="光明院" class="w-full h-40 object-cover">
+                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">光明院 (Komyoin)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -123,7 +124,7 @@
                                     </div>
                                     <!-- 東福寺 -->
                                     <div class="detail-tile">
-                                         <img src="https://images.unsplash.com/photo-1593811166543-c6c6a67f1b62?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080" alt="東福寺" class="w-full h-40 object-cover">
+                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">東福寺 (Tofuku-ji)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -135,7 +136,7 @@
                                     </div>
                                     <!-- 伏見稻荷大社 -->
                                     <div class="detail-tile">
-                                        <img src="https://images.unsplash.com/photo-1546190757-f6f3b7331e87?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080" alt="伏見稻荷大社" class="w-full h-40 object-cover">
+                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">伏見稻荷大社</h3>
                                             <ul class="space-y-3 text-sm">
