--- a/day6.html
+++ b/day6.html
@@ -93,7 +93,8 @@
                                     </ul>
                                 </div>
                                 <!-- 右欄: 圖片 -->
-                                <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" style="background-image: url('https://images.unsplash.com/photo-1542809137-8898b82458a2?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080');">
+                                <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" 
+                                style="background-image: url('照片');">
                                 </div>
                             </div>
                         </div>
@@ -109,7 +110,7 @@
                                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                     <!-- 貴船神社 -->
                                     <div class="detail-tile">
-                                        <img src="https://images.unsplash.com/photo-1545569400-75a8a859235c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080" alt="貴船神社" class="w-full h-40 object-cover">
+                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">貴船神社 (Kifune Shrine)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -121,7 +122,7 @@
                                     </div>
                                     <!-- 鞍馬溫泉 -->
                                     <div class="detail-tile">
-                                         <img src="https://images.unsplash.com/photo-1593811166543-c6c6a67f1b62?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080" alt="鞍馬溫泉" class="w-full h-40 object-cover">
+                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">鞍馬溫泉 (Kurama Onsen)</h3>
                                             <ul class="space-y-3 text-sm">
