--- a/day7.html
+++ b/day7.html
@@ -92,7 +92,8 @@
                                     </ul>
                                 </div>
                                 <!-- 右欄: 圖片 -->
-                                <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" style="background-image: url('https://images.unsplash.com/photo-1545569400-75a8a859235c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080');">
+                                <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" 
+                                style="background-image: url('照片');">
                                 </div>
                             </div>
                         </div>
@@ -108,7 +109,7 @@
                                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                                     <!-- 銀閣寺 -->
                                     <div class="detail-tile">
-                                        <img src="https://images.unsplash.com/photo-1596707374391-717d80501a5e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080" alt="銀閣寺" class="w-full h-40 object-cover">
+                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">銀閣寺 (Ginkaku-ji)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -120,7 +121,7 @@
                                     </div>
                                     <!-- 哲學之道 -->
                                     <div class="detail-tile">
-                                         <img src="https://images.unsplash.com/photo-1593811166543-c6c6a67f1b62?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080" alt="哲學之道" class="w-full h-40 object-cover">
+                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">哲學之道 (Philosopher's Path)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -132,7 +133,7 @@
                                     </div>
                                     <!-- 南禪寺 -->
                                     <div class="detail-tile">
-                                        <img src="https://images.unsplash.com/photo-1546190757-f6f3b7331e87?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080" alt="南禪寺" class="w-full h-40 object-cover">
+                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">南禪寺 (Nanzen-ji)</h3>
                                             <ul class="space-y-3 text-sm">
