--- a/day8.html
+++ b/day8.html
@@ -87,9 +87,10 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- 右欄: 圖片 -->
-                        <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" style="background-image: url('https://images.unsplash.com/photo-1579705839492-e38f613c1c8a?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Nzg5fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fDE3MzM5NDE5OTd8&ixid=rb-4.0.3&q=80&w=1080');">
-                        </div>
+                                <!-- 右欄: 圖片 -->
+                                <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" 
+                                style="background-image: url('照片');">
+                                </div>
                     </div>
                 </div>
             </div> <!-- /Slide 1 -->
