--- a/day7.html
+++ b/day7.html
@@ -93,7 +93,7 @@
                                 </div>
                                 <!-- 右欄: 圖片 -->
                                 <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" 
-                                style="background-image: url('照片');">
+                                style="background-image: url('https://images.unsplash.com/photo-1555547633-8a3d5b22b64a');">
                                 </div>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                                     <!-- 銀閣寺 -->
                                     <div class="detail-tile">
-                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
+                                        <img src="https://images.unsplash.com/photo-1555547633-8a3d5b22b64a" alt="銀閣寺 觀音殿" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">銀閣寺 (Ginkaku-ji)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -121,7 +121,7 @@
                                     </div>
                                     <!-- 哲學之道 -->
                                     <div class="detail-tile">
-                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_hY6gH0kQ0Q0yK1w5L-TzT5f9p7bH0v6w4g&s" alt="哲學之道" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">哲學之道 (Philosopher's Path)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -133,49 +133,13 @@
                                     </div>
                                     <!-- 南禪寺 -->
                                     <div class="detail-tile">
-                                        <img src="照片" alt="清水寺" class="w-full h-40 object-cover">
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4e-rL5c5sF4v_Q-x-2_c-bF7Z_b5g8W-6Q&s" alt="南禪寺 水路閣" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">南禪寺 (Nanzen-ji)</h3>
                                             <ul class="space-y-3 text-sm">
                                                 <li><i class="fas fa-history"></i><strong>由來:</strong> 1291 年由龜山法皇改建其離宮而成，是日本禪宗最高等級的寺院，位列「京都五山」之上。</li>
                                                 <li><i class="fas fa-square-check"></i><strong>特色:</strong> 寺院境內廣闊，擁有許多重要文化財，如「三門」、「方丈庭園」等。</li>
                                                 <li><i class="fas fa-star"></i><strong>必看:</strong> 1.「三門」：高 22 公尺的巨大木造城門，可登樓眺望京都市景。 2.「水路閣」：明治時代建造的紅磚拱橋水道（琵琶湖疏水的一部分），古老的寺廟與近代工業建築並存的畫面極具衝擊力，是攝影熱點。</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <!-- 景點4 -->
-                                    <div class="detail-tile">
-                                        <img src="照片網址" alt="別名" class="w-full h-40 object-cover">
-                                        <div class="p-5">
-                                            <h3 class="text-xl mb-3">景點4</h3>
-                                            <ul class="space-y-3 text-sm">
-                                                <li><i class="fas fa-history"></i><strong>由來:</strong>輸入文字</li>
-                                                <li><i class="fas fa-square-check"></i><strong>特色:</strong>輸入文字</li>
-                                                <li><i class="fas fa-star"></i><strong>必看:</strong>輸入文字</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <!-- 景點5 -->
-                                    <div class="detail-tile">
-                                        <img src="照片網址" alt="別名" class="w-full h-40 object-cover">
-                                        <div class="p-5">
-                                            <h3 class="text-xl mb-3">景點5</h3>
-                                            <ul class="space-y-3 text-sm">
-                                                <li><i class="fas fa-history"></i><strong>由來:</strong>輸入文字</li>
-                                                <li><i class="fas fa-square-check"></i><strong>特色:</strong>輸入文字</li>
-                                                <li><i class="fas fa-star"></i><strong>必看:</strong>輸入文字</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <!-- 景點6 -->
-                                    <div class="detail-tile">
-                                        <img src="照片網址" alt="別名" class="w-full h-40 object-cover">
-                                        <div class="p-5">
-                                            <h3 class="text-xl mb-3">景點6</h3>
-                                            <ul class="space-y-3 text-sm">
-                                                <li><i class="fas fa-history"></i><strong>由來:</strong>輸入文字</li>
-                                                <li><i class="fas fa-square-check"></i><strong>特色:</strong>輸入文字</li>
-                                                <li><i class="fas fa-star"></i><strong>必看:</strong>輸入文字</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -193,75 +157,72 @@
                                 </h3>
                                 <div class="space-y-6">
                                     
-                                    <!-- 餐廳 1: 餐廳名稱 -->
+                                    <!-- 餐廳 1: 南禪寺 順正 (午餐/湯豆腐) -->
                                     <div>
-                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>餐別:</strong>餐廳名稱</h4>
+                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>午餐:</strong> 南禪寺 順正 (湯豆腐會席)</h4>
                                         <div class="mt-3 grid grid-cols-1 md:grid-cols-2 gap-4">
                                             <!-- Left: Map -->
-                                            <div class="map-placeholder">
-                                                <i class="fas fa-map-location-dot text-2xl"></i>
-                                                <p class="text-sm mt-1">Google Map 嵌入位置</p>
+                                            <div class="map-placeholder" style="padding: 0; border: none; background: none; overflow: hidden;">
+                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3268.423719001395!2d135.79092477684288!3d35.01168916723239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600108db283626e3%3A0x633e9b1d169c9b74!2z5Y-k6YO96Ieq5bCU5ZyS!5e0!3m2!1szh-TW!2stw!4v1762588147779!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                             </div>
                                             <!-- Right: Details -->
                                             <div class="p-3 bg-gray-50 rounded-lg border border-gray-200 space-y-3">
                                                 <!-- 照片放置區 -->
-                                                    <img src="照片網址" alt="別名" class="w-full h-60 object-cover rounded-lg">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhV-70H4c2y-gQ0vQy_k-FfT9L5gG-c_TzCg&s" alt="南禪寺順正 湯豆腐" class="w-full h-60 object-cover rounded-lg">
                                                 <!-- 文字介紹 -->
                                                      <div>
                                                         <h5 class="text-base font-semibold mb-2">餐廳介紹與特色菜單</h5>
                                                         <ul class="list-disc list-inside text-sm space-y-1 text-gray-700">
-                                                            <li><strong>基本介紹:</strong>輸入文字</li>
-                                                            <li><strong>特色菜單:</strong>輸入文字</li>
+                                                            <li><strong>基本介紹:</strong> 位於南禪寺附近，是京都著名的湯豆腐名店，能在傳統的日式庭園環境中享用精緻的豆腐會席料理。</li>
+                                                            <li><strong>特色菜單:</strong> 招牌「湯豆腐套餐」，以及包含炸物、烤物、各種豆腐料理的懷石套餐。</li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                         </div>
                                     </div>
 
-                                    <!-- 餐廳 2: 餐廳名稱 -->
+                                    <!-- 餐廳 2: CHOCOLAT BEL AMER 京都別邸 (點心) -->
                                     <div>
-                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>餐別:</strong>餐廳名稱</h4>
+                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>點心:</strong> BEL AMER 京都別邸 (巧克力專賣店)</h4>
                                         <div class="mt-3 grid grid-cols-1 md:grid-cols-2 gap-4">
                                             <!-- Left: Map -->
-                                            <div class="map-placeholder">
-                                                <i class="fas fa-map-location-dot text-2xl"></i>
-                                                <p class="text-sm mt-1">Google Map 嵌入位置</p>
+                                            <div class="map-placeholder" style="padding: 0; border: none; background: none; overflow: hidden;">
+                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3268.490196853244!2d135.78769307684275!3d35.01019186729013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600108920155b93d%3A0xc3b7a597a8e23f04!2sCHOCOLAT%20BEL%20AMER%20%E4%BA%AC%E9%83%BD%E5%88%A5%E9%82%B8%20%E9%8A%80%E9%96%A3%E5%AF%BA%E5%BA%97!5e0!3m2!1szh-TW!2stw!4v1762588329241!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                             </div>
                                             <!-- Right: Details -->
                                             <div class="p-3 bg-gray-50 rounded-lg border border-gray-200 space-y-3">
                                                 <!-- 照片放置區 -->
-                                                    <img src="照片網址" alt="別名" class="w-full h-60 object-cover rounded-lg">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPn0c6_lX9Z6V6-fD-c5_sN5R5A2Qy3-vV7Q&s" alt="BEL AMER 京都別邸 巧克力" class="w-full h-60 object-cover rounded-lg">
                                                 <!-- 文字介紹 -->
                                                      <div>
                                                         <h5 class="text-base font-semibold mb-2">餐廳介紹與特色菜單</h5>
                                                         <ul class="list-disc list-inside text-sm space-y-1 text-gray-700">
-                                                            <li><strong>基本介紹:</strong>輸入文字</li>
-                                                            <li><strong>特色菜單:</strong>輸入文字</li>
+                                                            <li><strong>基本介紹:</strong> 位於銀閣寺參道附近，是將法式巧克力與日本元素結合的精緻品牌。</li>
+                                                            <li><strong>特色菜單:</strong> 推薦「瑞穗之滴」，將日本酒或茶製成的果凍放入圓形巧克力中；店內也提供內用，適合搭配抹茶或咖啡享用。</li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                         </div>
                                     </div>
 
-                                    <!-- 餐廳 3: 餐廳名稱 -->
+                                    <!-- 餐廳 3: 料庭 八千代 (晚餐) -->
                                     <div>
-                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>餐別:</strong>餐廳名稱</h4>
+                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>晚餐:</strong> 料庭 八千代 (懷石料理)</h4>
                                         <div class="mt-3 grid grid-cols-1 md:grid-cols-2 gap-4">
                                             <!-- Left: Map -->
-                                            <div class="map-placeholder">
-                                                <i class="fas fa-map-location-dot text-2xl"></i>
-                                                <p class="text-sm mt-1">Google Map 嵌入位置</p>
+                                            <div class="map-placeholder" style="padding: 0; border: none; background: none; overflow: hidden;">
+                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3268.4552504268685!2d135.79093037684285!3d35.01089226726227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600108db8c067a91%3A0xc3f5a0928227b926!2z5r-k5a-65Y2A5LqM!5e0!3m2!1szh-TW!2stw!4v1762588439810!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                             </div>
                                             <!-- Right: Details -->
                                             <div class="p-3 bg-gray-50 rounded-lg border border-gray-200 space-y-3">
                                                 <!-- 照片放置區 -->
-                                                    <img src="照片網址" alt="別名" class="w-full h-60 object-cover rounded-lg">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhH-6oP0Q2i6Q5rX8XoN1r8M2gW-s2k-z9Q&s" alt="料庭八千代 庭園" class="w-full h-60 object-cover rounded-lg">
                                                 <!-- 文字介紹 -->
                                                      <div>
                                                         <h5 class="text-base font-semibold mb-2">餐廳介紹與特色菜單</h5>
                                                         <ul class="list-disc list-inside text-sm space-y-1 text-gray-700">
-                                                            <li><strong>基本介紹:</strong>輸入文字</li>
-                                                            <li><strong>特色菜單:</strong>輸入文字</li>
+                                                            <li><strong>基本介紹:</strong> 位於南禪寺參道上的料理旅館，擁有第七代小川治兵衛設計的精美日式庭園「青龍庭園」。</li>
+                                                            <li><strong>特色菜單:</strong> 提供懷石料理、壽喜燒、涮涮鍋等。可預訂面向庭園的座位，一邊欣賞京都名庭一邊享用精緻的京料理。</li>
                                                         </ul>
                                                     </div>
                                                 </div>
