--- a/day6.html
+++ b/day6.html
@@ -14,7 +14,7 @@
     <!-- 載入 Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Azeret+Mono:wght@400;700&family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Azeret+Mono:wght@400;700&family=Noto+Sans+TC:wght@400;700&display.swap" rel="stylesheet">
     
     <!-- 載入共用樣式表 -->
     <link rel="stylesheet" href="style.css">
@@ -94,7 +94,7 @@
                                 </div>
                                 <!-- 右欄: 圖片 -->
                                 <div class="h-64 md:h-auto min-h-[300px] w-full bg-cover bg-center rounded-b-lg md:rounded-b-none md:rounded-r-lg" 
-                                style="background-image: url('照片');">
+                                style="background-image: url('https://images.unsplash.com/photo-1549419163-952d7634f195');">
                                 </div>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                     <!-- 貴船神社 -->
                                     <div class="detail-tile">
-                                        <img src="照片網址" alt="別名" class="w-full h-40 object-cover">
+                                        <img src="https://images.unsplash.com/photo-1549419163-952d7634f195" alt="貴船神社 雪景燈籠" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">貴船神社 (Kifune Shrine)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -122,7 +122,7 @@
                                     </div>
                                     <!-- 鞍馬溫泉 -->
                                     <div class="detail-tile">
-                                        <img src="照片網址" alt="別名" class="w-full h-40 object-cover">
+                                        <img src="https://media.tokyofun.com/media/2021/04/KuramaOnsen_20210419-1.jpg" alt="鞍馬溫泉 露天風呂" class="w-full h-40 object-cover">
                                         <div class="p-5">
                                             <h3 class="text-xl mb-3">鞍馬溫泉 (Kurama Onsen)</h3>
                                             <ul class="space-y-3 text-sm">
@@ -132,27 +132,27 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <!-- 景點3 -->
+                                    <!-- 景點3: 鞍馬寺 -->
                                     <div class="detail-tile">
-                                        <img src="照片網址" alt="別名" class="w-full h-40 object-cover">
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR61z-o8X1oR0O5G0_6z4fB2-oG6o6r6F_QZg&s" alt="鞍馬寺 金剛床" class="w-full h-40 object-cover">
                                         <div class="p-5">
-                                            <h3 class="text-xl mb-3">景點3</h3>
+                                            <h3 class="text-xl mb-3">鞍馬寺 (Kurama-dera)</h3>
                                             <ul class="space-y-3 text-sm">
-                                                <li><i class="fas fa-history"></i><strong>由來:</strong>輸入文字</li>
-                                                <li><i class="fas fa-square-check"></i><strong>特色:</strong>輸入文字</li>
-                                                <li><i class="fas fa-star"></i><strong>必看:</strong>輸入文字</li>
+                                                <li><i class="fas fa-history"></i><strong>由來:</strong> 創建於 770 年，是鞍馬弘教的總本山。相傳牛若丸（源義經）年幼時曾在此修行，並跟隨天狗學習武藝。</li>
+                                                <li><i class="fas fa-square-check"></i><strong>特色:</strong> 寺廟坐落在鞍馬山中，從貴船到鞍馬（或反之）的登山步道非常著名，沿途景致優美。</li>
+                                                <li><i class="fas fa-star"></i><strong>必看:</strong> 鞍馬寺本殿金堂前的「金剛床」，據說是強大的能量點（Power Spot），許多人會在此汲取宇宙能量。</li>
                                             </ul>
                                         </div>
                                     </div>
-                                    <!-- 景點4 -->
+                                    <!-- 景點4: 叡山電車 -->
                                     <div class="detail-tile">
-                                        <img src="照片網址" alt="別名" class="w-full h-40 object-cover">
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHbO9BqMvB3_XQ0XJ8w4n5oYkYgD7r1K9D9Q&s" alt="叡山電車 觀光列車" class="w-full h-40 object-cover">
                                         <div class="p-5">
-                                            <h3 class="text-xl mb-3">景點4</h3>
+                                            <h3 class="text-xl mb-3">叡山電車 (Eizan Railway)</h3>
                                             <ul class="space-y-3 text-sm">
-                                                <li><i class="fas fa-history"></i><strong>由來:</strong>輸入文字</li>
-                                                <li><i class="fas fa-square-check"></i><strong>特色:</strong>輸入文字</li>
-                                                <li><i class="fas fa-star"></i><strong>必看:</strong>輸入文字</li>
+                                                <li><i class="fas fa-history"></i><strong>由來:</strong> 連接京都市區（出町柳站）與鞍馬/貴船地區的私營鐵路。</li>
+                                                <li><i class="fas fa-square-check"></i><strong>特色:</strong> 擁有展望列車，沿途經過山林景觀，是前往京都秘境的重要觀光交通工具。</li>
+                                                <li><i class="fas fa-star"></i><strong>必看:</strong> 在市區搭乘巴士前往出町柳站轉乘叡山電車，本身就是一段遠離塵囂的療癒之旅。</li>
                                             </ul>
                                         </div>
                                     </div>                                   
@@ -170,75 +170,72 @@
                                 </h3>
                                 <div class="space-y-6">
                                     
-                                    <!-- 餐廳 1: 餐廳名稱 -->
+                                    <!-- 餐廳 1: 傳兵衛 (午餐) -->
                                     <div>
-                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>餐別:</strong>餐廳名稱</h4>
+                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>午餐:</strong> 貴船 傳兵衛 (Dembe)</h4>
                                         <div class="mt-3 grid grid-cols-1 md:grid-cols-2 gap-4">
                                             <!-- Left: Map -->
-                                            <div class="map-placeholder">
-                                                <i class="fas fa-map-location-dot text-2xl"></i>
-                                                <p class="text-sm mt-1">Google Map 嵌入位置</p>
+                                            <div class="map-placeholder" style="padding: 0; border: none; background: none; overflow: hidden;">
+                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805.2046460144574!2d135.77096696349547!3d35.11863554448557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001ab42750e964b%3A0x1d37803a557b640e!2z5Lym6JGr6JGr!5e0!3m2!1szh-TW!2stw!4v1762586737526!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                             </div>
                                             <!-- Right: Details -->
                                             <div class="p-3 bg-gray-50 rounded-lg border border-gray-200 space-y-3">
                                                 <!-- 照片放置區 -->
-                                                    <img src="照片網址" alt="別名" class="w-full h-60 object-cover rounded-lg">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOX3j9r7c0j3Fq8H1jGzYJ7J7_yFj5j3qF-Q&s" alt="傳兵衛蕎麥麵" class="w-full h-60 object-cover rounded-lg">
                                                 <!-- 文字介紹 -->
                                                      <div>
                                                         <h5 class="text-base font-semibold mb-2">餐廳介紹與特色菜單</h5>
                                                         <ul class="list-disc list-inside text-sm space-y-1 text-gray-700">
-                                                            <li><strong>基本介紹:</strong>輸入文字</li>
-                                                            <li><strong>特色菜單:</strong>輸入文字</li>
+                                                            <li><strong>基本介紹:</strong> 位於貴船神社附近，是貴船地區少數提供實惠蕎麥麵和釜飯的餐廳（冬季菜單以溫暖餐點為主）。</li>
+                                                            <li><strong>特色菜單:</strong> 湯蕎麥麵套餐、山菜蕎麥麵。冬季雖然沒有川床，但在寧靜的山區中享用熱騰騰的蕎麥麵非常暖身。</li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                         </div>
                                     </div>
 
-                                    <!-- 餐廳 2: 餐廳名稱 -->
+                                    <!-- 餐廳 2: 鞍馬 壽福堂 (點心) -->
                                     <div>
-                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>餐別:</strong>餐廳名稱</h4>
+                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>點心:</strong> 鞍馬 壽福堂 (山椒餅)</h4>
                                         <div class="mt-3 grid grid-cols-1 md:grid-cols-2 gap-4">
                                             <!-- Left: Map -->
-                                            <div class="map-placeholder">
-                                                <i class="fas fa-map-location-dot text-2xl"></i>
-                                                <p class="text-sm mt-1">Google Map 嵌入位置</p>
+                                            <div class="map-placeholder" style="padding: 0; border: none; background: none; overflow: hidden;">
+                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1609.9546255169974!2d135.7744319110486!3d35.12297111053748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001ab42a348e029%3A0x6b77207c40e51351!2z5pyJ5Y2A!5e0!3m2!1szh-TW!2stw!4v1762586948512!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                             </div>
                                             <!-- Right: Details -->
                                             <div class="p-3 bg-gray-50 rounded-lg border border-gray-200 space-y-3">
                                                 <!-- 照片放置區 -->
-                                                    <img src="照片網址" alt="別名" class="w-full h-60 object-cover rounded-lg">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRk1H0c3H8T5_P-kYgY7_8E7l-L0J3W-v4QWw&s" alt="鞍馬山椒餅" class="w-full h-60 object-cover rounded-lg">
                                                 <!-- 文字介紹 -->
                                                      <div>
                                                         <h5 class="text-base font-semibold mb-2">餐廳介紹與特色菜單</h5>
                                                         <ul class="list-disc list-inside text-sm space-y-1 text-gray-700">
-                                                            <li><strong>基本介紹:</strong>輸入文字</li>
-                                                            <li><strong>特色菜單:</strong>輸入文字</li>
+                                                            <li><strong>基本介紹:</strong> 位於鞍馬寺山門附近，是採買當地特產和甜點的絕佳地點。</li>
+                                                            <li><strong>特色菜單:</strong> 鞍馬特有的「山椒餅」或「牛若餅」，微辣的山椒風味搭配甜點，獨特又可口，適合當作登山後的犒賞。</li>
                                                         </ul>
                                                     </div>
                                                 </div>
                                         </div>
                                     </div>
 
-                                    <!-- 餐廳 3: 餐廳名稱 -->
+                                    <!-- 餐廳 3: 博多一幸舍 (晚餐 - 京都車站) -->
                                     <div>
-                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>餐別:</strong>餐廳名稱</h4>
+                                        <h4 class="text-xl font-semibold relative before:content-['🍵'] before:absolute before:-left-7"><strong>晚餐 (回程):</strong> 博多一幸舍 (京都拉麵小路)</h4>
                                         <div class="mt-3 grid grid-cols-1 md:grid-cols-2 gap-4">
                                             <!-- Left: Map -->
-                                            <div class="map-placeholder">
-                                                <i class="fas fa-map-location-dot text-2xl"></i>
-                                                <p class="text-sm mt-1">Google Map 嵌入位置</p>
+                                            <div class="map-placeholder" style="padding: 0; border: none; background: none; overflow: hidden;">
+                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3268.837902799999!2d135.75542497684307!3d34.985724767864504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001089a3a451a29%3A0x8aa203d50015c17c!2z5Lqs6YO95ouJ6bq15bCP6Lev!5e0!3m2!1szh-TW!2stw!4v1762587093375!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                             </div>
                                             <!-- Right: Details -->
                                             <div class="p-3 bg-gray-50 rounded-lg border border-gray-200 space-y-3">
                                                 <!-- 照片放置區 -->
-                                                    <img src="照片網址" alt="別名" class="w-full h-60 object-cover rounded-lg">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR07w-K50n6M_zL8g5hP-9W8tM7L0k4N9gQZg&s" alt="博多一幸舍拉麵" class="w-full h-60 object-cover rounded-lg">
                                                 <!-- 文字介紹 -->
                                                      <div>
                                                         <h5 class="text-base font-semibold mb-2">餐廳介紹與特色菜單</h5>
                                                         <ul class="list-disc list-inside text-sm space-y-1 text-gray-700">
-                                                            <li><strong>基本介紹:</strong>輸入文字</li>
-                                                            <li><strong>特色菜單:</strong>輸入文字</li>
+                                                            <li><strong>基本介紹:</strong> 位於京都車站伊勢丹百貨 10 樓的拉麵小路內，提供日本各地的特色拉麵。</li>
+                                                            <li><strong>特色菜單:</strong> 濃郁的博多豚骨拉麵，麵條可選硬度。適合長途跋涉回京都車站後，快速、暖身地享用晚餐。</li>
                                                         </ul>
                                                     </div>
                                                 </div>
